# hotel-booking

./: .env  .gitignore  Dockerfile  dep.ps1  docker-compose.yml  hello.py  lint.ps1  pyproject.toml  requirements-dev.txt  requirements.txt
graph_models/: booking_models.dot  hotel_models.dot  review_models.dot  user_models.dot
src/hotel_booking/: settings.py  urls.py
src/modules/booking/: admin.py  apps.py  exceprions.py  models.py  permissions.py  serializers.py  services.py  views.py
src/modules/booking/migrations/: 0001_initial.py  0002_alter_booking_service.py  0003_alter_booking_service.py  0003_booking_created_at.py  0004_alter_booking_created_at.py  0005_alter_booking_created_at.py  0006_alter_booking_created_at_alter_booking_room_and_more.py
src/modules/hotel/: admin.py  apps.py  models.py  serializers.py
src/modules/hotel/migrations/: 0001_initial.py  0002_alter_hotel_description_alter_room_description_and_more.py  0002_alter_room_status.py  0003_hotel_city.py
src/modules/review/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/modules/review/migrations/: 0001_initial.py  0002_alter_review_comment.py  0003_alter_review_rating.py  0004_alter_review_rating.py
src/modules/user/: admin.py  models.py  serializer.py  serializers.py  service.py  views.py
src/modules/user/migrations/: 0001_initial.py  0002_alter_user_phone_number_alter_user_username.py  0003_alter_user_username.py  0004_alter_user_username.py
