[project]
name = "hotelbooking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-extensions>=4.1",
    "django-rest-framework>=0.1.0",
    "django-environ>=0.12.0",
    "psycopg[binary]==3.2.3",
    "django-unfold>=0.63.0",
    "djangorestframework-simplejwt[crypto]>=5.5.1",
    "djoser>=2.3.3",
    "drf-spectacular>=0.28.0",
]
